<resources>
    <string name="app_name"></string>
    <string name="title_activity_create_user">CreateUser</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="create_user">Create User</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>



    <string name="Complete">Complete</string>
    <string name="Error">Error</string>
    <string name="Upload">Confirm</string>



    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string name="item_home">HOME</string>
    <string name="item_people">PEOPLE</string>
    <string name="item_calendar">CALENDAR</string>
    <string name="item_chat">CHAT</string>
    <string name="item_settings">SETTINGS</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_second">Second</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="select_profile_picture">Profile image</string>
    <string name="create_user_browse_photo">Browse...</string>
    <string name="create_user_capture_photo">Selfie!</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_navigation_drawer_fragment">NavigationDrawerFragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">Three days</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_people2">PeopleActivity2</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_add_group"></string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_test">TEST</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">send</string>
    <string name="myself">MySelf</string>
    <string name="friend">Friend</string>
    <string name="messageEdit">type message</string>
    <string name="title_activity_try">TRY</string>
    <string name="title_activity_group_chat">GroupChat</string>
    <string name="prompt_username">prompt_username</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="action_sign_in">action_sign_in</string>




    //Chat

    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="ptr_pull_to_refresh">ptr_pull_to_refresh</string>
    <string name="ptr_release_to_refresh">ptr_release_to_refresh</string>
    <string name="ptr_refreshing">ptr_refreshing</string>
    <string name="ptr_last_updated">ptr_last_updated</string>
    <string name="hint_email">hint_email</string>
    <string name="hint_name">hint_name</string>
    <string name="hint_description">hint_description</string>
    <string name="Description">Description</string>
    <string name="Name">Name</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="title_activity_teacher_schedule">TeacherScheduleActivity</string>
</resources>
