<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--All the items added without any grouping-->
    <item
        android:id="@+id/navigation_itemHOME"
        android:icon="@drawable/home"
        android:title="@string/item_home" />
    <item
        android:id="@+id/navigation_itemPEOPLE"
        android:icon="@drawable/people"
        android:title="@string/item_people" />
    <item
        android:id="@+id/navigation_itemCALENDAR"
        android:icon="@drawable/calendar"
        android:title="@string/item_calendar" />
    <item
        android:id="@+id/navigation_itemMESSAGING"
        android:icon="@drawable/message"
        android:title="@string/item_messaging" />
    <item
        android:id="@+id/navigation_itemSETTINGS"
        android:icon="@drawable/settings1"
        android:title="@string/item_settings" />



</menu>