<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_itemHOME"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/item_home" />
        <item
            android:id="@+id/navigation_itemPEOPLE"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/item_people" />
        <item
            android:id="@+id/navigation_itemCALENDAR"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/item_calendar" />
        <item
            android:id="@+id/navigation_itemMESSAGING"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/item_messaging" />


    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/navigation_itemSETTINGS"
                android:icon="@drawable/settings1"
                android:title="@string/item_settings" />
        </menu>
    </item>

</menu>