

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/Name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_name"
                android:layout_alignParentEnd="true">
            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Description"
                android:singleLine="false"

                android:layout_marginTop="34dp"
                android:layout_below="@+id/input_layout_name"
                android:layout_alignParentEnd="true" />
        </android.support.design.widget.TextInputLayout>


            <com.dd.CircularProgressButton
                     android:id="@+id/circularButton2"
                     android:layout_width="196dp"
                     android:layout_height="64dp"
                android:textColor="@color/cpb_white"
                     android:textSize="18sp"
                     app:cpb_textComplete="@string/Complete"
                     app:cpb_textError="@string/Error"
                     app:cpb_textIdle="@string/Upload"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="27dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button"
                android:layout_above="@+id/circularButton2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="49dp" />


        </RelativeLayout>




    </android.support.design.widget.CoordinatorLayout>
