<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_create_user"
    tools:context="lol.go2study.go2study.CreateUserActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <ImageView
        android:id="@+id/g2sImageView"
        android:layout_width="102dp"
        android:layout_height="103dp"
        android:src="@drawable/logo"

        android:contentDescription=""
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/classesSelector"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/g2sImageView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_profile_picture"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/photoImageView"
        android:layout_alignStart="@+id/btnCreateUser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:id="@+id/btnCreateUser"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user_capture_photo"
        android:id="@+id/selfiebtn"
        android:layout_below="@+id/photoImageView"

        android:layout_gravity="right"

        android:layout_toEndOf="@+id/g2sImageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user_browse_photo"
        android:id="@+id/browsebtn"

        android:layout_below="@+id/photoImageView"
        android:layout_toStartOf="@+id/btnCreateUser" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="230dp"
        android:id="@+id/photoImageView"
        android:focusableInTouchMode="true"
        android:src = "@drawable/userphoto"
        android:contentDescription="str"
        android:scaleType="fitXY"
        android:layout_below="@+id/classesSelector"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
